3-hello-minikube-ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-minikube
  name: hello-minikube
  namespace: default
spec:
  ports:
  - nodePort: 31293
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello-minikube
  sessionAffinity: None
  type: LoadBalancer
