3-hello-minikube-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-minikube-ingress
  namespace: default
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /echo
            backend:
              service:
                name: hello-minikube
                port:
                  number: 8080
